base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  namespace: formation-lap
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: matchacake-alb-test-seoul
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:087730891580:certificate/4f13064a-8543-41f1-abcc-d2ca07f7584e
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/docs
            pathType: Exact
            backend:
              service:
                name: backend-api-service
                port:
                  number: 8000
          - path: /api/openapi.json
            pathType: Exact
            backend:
              service:
                name: backend-api-service
                port:
                  number: 8000
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend-api-service
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend-api-service
                port:
                  number: 8000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8000
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
